--- a/cal.css
+++ b/cal.css
@@ -4,7 +4,7 @@
   font-family: 'poppins', sans-serif;
 }
 body{
-  background-color: violet;
+  background-color: purple;
   display: grid;
   height: 100vh;
   place-items: center;
