--- a/cal.css
+++ b/cal.css
@@ -12,7 +12,7 @@ body{
 .main{
   width: 400px;
   height: 450px;
-  background-color: green;
+  background-color: gren;
   position: absolute;
   border: 5px solid black;
   border-radius: 6px; 
