--- a/cal.css
+++ b/cal.css
@@ -1,7 +1,7 @@
 *{
   padding: 0;
   margin: 0;
-  font-family: 'poppins', sans-serif;o
+  font-family: 'poppins', sans-serif;
 }
 body{
   background-color: purple;
